--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      pages: write
-      id-token: write
+      contents: read    # для чтения кода
+      pages: write      # для записи в Pages
+      id-token: write   # для authenticate via OIDC
 
     steps:
       - name: Checkout repository
@@ -35,15 +35,12 @@ jobs:
       - name: Configure Pages
         uses: actions/configure-pages@v3
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: ./_site
+      - name: Upload artifact for Pages
+        uses: actions/upload-pages-artifact@v3
 
       - name: Deploy to Pages
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
 
-      # —–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
       - name: Print site URL
         run: |
           echo "✅ Site successfully deployed!"
